<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="app_title">Expense Tracker</string>
    <string name="add_an_expense">Add an expense:</string>
    <string name="dummy_price">0.00Ft</string>
    <string name="add_text">Add</string>
    <string name="category_food">Food</string>
    <string name="category_shopping">Shopping</string>
    <string name="category_transport">Transport</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_other">Other</string>
    <string name="no_expenses_yet">There isn\'t any expense yet</string>
    <string name="home">Home</string>
    <string name="statistics">Statictics\n</string>
    <string name="last_expenses">Last expenses</string>
    <string name="empty_amount">Expense amount cannot be empty!</string>
    <string name="added_successfuly">Successfuly saved</string>
    <string name="expense_deleted">Expense deleted</string>
    <string name="chart_title">Expense Statictics</string>
    <string name="expenses_by_categories">Expenses by categories</string>
    <string name="chart_amount">Amount (Ft)</string>
    <string name="this_month">This month</string>
    <string name="last_expenses_title">Last expenses</string>
</resources>