<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_field_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_field_add_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_an_expense"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:layout_marginTop="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_field_app_title" />

    <EditText
        android:id="@+id/edit_text_expense"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:hint="@string/dummy_price"
        android:padding="10dp"
        android:textSize="25sp"
        android:paddingBottom="10dp"
        android:background="@color/light_green"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:inputType="numberDecimal"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/text_field_add_expense" />

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/edit_text_expense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/light_green"
        android:spinnerMode="dropdown"
        />


    <Button
        android:id="@+id/button_add_expense"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/add_text"
        android:textColor="@color/dark_green"
        android:backgroundTint="@color/own_light_green"
        android:padding="15dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/spinner_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/own_light_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/nav_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_add_circle"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/home"
            android:scaleType="centerInside"
            app:tint="@color/dark_green" />

        <ImageButton
            android:id="@+id/nav_statictics"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_graph"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/statistics"
            android:scaleType="centerInside"
            app:tint="@color/dark_green" />

        <ImageButton
            android:id="@+id/nav_expenses"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_settings"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/last_expenses"
            android:scaleType="centerInside"
            app:tint="@color/dark_green" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>