<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_expenses_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <ListView
        android:id="@+id/list_view_expenses"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:divider="@color/white"
        android:dividerHeight="1dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/own_light_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/nav_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_add_circle"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/home"
            android:scaleType="centerInside"
            app:tint="@color/dark_green" />

        <ImageButton
            android:id="@+id/nav_statictics"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_graph"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/statistics"
            android:scaleType="centerInside"
            app:tint="@color/dark_green" />

        <ImageButton
            android:id="@+id/nav_expenses"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_settings"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/last_expenses"
            android:scaleType="centerInside"
            app:tint="@color/dark_green" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
